--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -1,38 +1,28 @@
 absl-py==0.15.0
 attrs==21.2.0
 autopy==4.0.0
-cached-property==1.5.2
 certifi==2021.10.8
-clang==5.0
-click==8.1.3
+click==8.1.2
 colorama==0.4.4
 cycler==0.10.0
-flatbuffers==1.12
 future==0.18.2
-gast==0.4.0
-grpcio==1.41.1
-h5py==3.1.0
 importlib-metadata==4.11.3
-keras==2.6.0
-Keras-Preprocessing==1.1.2
 keyboard==0.13.5
 kiwisolver==1.3.2
 matplotlib==3.4.3
 mediapipe==0.8.6
-numpy==1.19.5
+numpy==1.21.3
 opencv-contrib-python==4.5.4.58
 opencv-python==4.5.2.52
-opt-einsum==3.3.0
 pefile==2021.9.3
 Pillow==8.4.0
 protobuf==3.19.0
 pyparsing==3.0.1
 python-dateutil==2.8.2
+QPT==1.0b3.dev7
 six==1.16.0
-tensorboard==2.7.0
-tensorflow-estimator==2.6.0
 ttkbootstrap==0.5.1
-typing-extensions==3.7.4.3
+typing_extensions==4.1.1
 wget==3.2
 wincertstore==0.2
 zipp==3.8.0
